@@ -12,6 +12,8 @@
  * Client/TextUI: "net" does not show last recv/sent command (the lines were too long)
  * Client/WebUI/Miners: Versions tables only show a summary of single occurences of uniqe values
  * Client: network.DropPeer() does not automatically ban the peer if its IsSpecial is set
+ * Client/WebUI/Miners: Shows how many unique version values were mined by each miner
+ * Client/WebUI/Miners: Clicking on a miner's row shows which blocks were mined by it
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
